Downgraded java to 8 and bumped version to 1.2.2
Signed-off-by: AndyNoob <comfortableandy9082@gmail.com>